# mlai_word2vec

./: LICENSE.md  README.md  analysis.py  corpus_preprocessing.py  dataset_loading.py  doc.excalidraw  main.py  network.py  preprocessing.py  pyproject.toml  skip_gram_negative_sampling.py  trained_10_20_5_0.1_.npz
dataset/: toy_example.txt
saved_trained/: trained_10_20_5_0.1_.npz
saves/: positive_training_pairs.txt  trained_100_1_50_2_100000_0.02_.npz  trained_10_1_300_200_10_0.01_.npz  trained_10_1_300_200_10_0.1_.npz  trained_10_1_300_20_100_0.01_.npz  trained_10_1_300_20_10_0.01_.npz  trained_10_1_300_20_10_0.1_.npz  trained_10_1_5_20_100_0.02_.npz  trained_10_2_300_20_10_0.02_.npz  trained_1_1_63_200_10_0.1_.npz  trained_1_2_63_200_10_0.01_.npz  trained_20_1_485_1_3_0.1_.npz  trained_20_1_485_20_10_0.1_.npz  trained_20_1_485_20_3_0.1_.npz  trained_2_2_104_200_10_0.01_.npz  trained_2_2_104_20_10_0.02_.npz  trained_2_2_104_20_2_0.02_.npz  trained_2_2_104_20_4_0.02_.npz
saves/temp/: positive_training_pairs.txt
